# flocking-core

./: Cargo.toml  README.md
.github/workflows/: audit.yaml  build.yaml
examples/print_audio_tree/: main.rs
flocking/: Cargo.toml
flocking/src/: json.rs  lib.rs  utils.rs
flocking_cpal/: Cargo.toml
flocking_cpal/examples/print_audio_tree/: main.rs
flocking_cpal/examples/run_composition/: main.rs  test_composition.json
flocking_cpal/src/: env.rs  lib.rs  utils.rs
src/: lib.rs  main.rs
